--- a/app/src/main/res/layout/service_account_fragment.xml
+++ b/app/src/main/res/layout/service_account_fragment.xml
@@ -38,6 +38,7 @@
                     android:hint="@string/content_description_hotelName">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:text="@={serviceAccountViewModel.hotelName}"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"/>
 
@@ -50,6 +51,7 @@
                     android:hint="@string/address">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:text="@={serviceAccountViewModel.address}"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"/>
 
@@ -62,6 +64,7 @@
                     android:hint="@string/contact_no">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:text="@={serviceAccountViewModel.contactNo}"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"/>
 
@@ -74,6 +77,7 @@
                     android:hint="@string/email">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:text="@={serviceAccountViewModel.email}"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"/>
 
@@ -86,6 +90,7 @@
                     android:hint="@string/price_per_plate">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:text="@={serviceAccountViewModel.pricePerPlate}"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"/>
 
@@ -98,6 +103,7 @@
                     android:hint="@string/password">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:text="@={serviceAccountViewModel.password}"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"/>
 
@@ -123,6 +129,7 @@
 
         <Button
             android:id="@+id/button3"
+            android:onClick="@{serviceAccountViewModel::onRegistrationButtonClick}"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/registration"
