--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -95,7 +95,7 @@
                     android:contentDescription="@string/content_description_password" />
 
                 <Button
-                    android:onClick="@{() -> LoginAccountFragment.onCancel()}"
+                    android:onClick="@{loginViewModel::onCancelButtonClick}"
                     android:id="@+id/button5"
                     style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                     android:layout_width="0dp"
